--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
-  <title>Simple Tailwind Starter</title>
+  <title>Digital Agency</title>
 </head>
 
 <body class="bg-[#FDFCFC]">
