margin bottom in the footer  removed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Digital Agency</title>
 </head>
 
-<body class="bg-[#FDFCFC] mb-20">
+<body class="bg-[#FDFCFC]">
 
   <div id="circle1"></div>
   <div id="circle2"></div>
@@ -167,7 +167,7 @@
   </div>
 
   <footer class="bg-[#F6F6F6]">
-    <div class="mx-40 my-20 py-20">
+    <div class="mx-40 mt-20 py-20">
 
       <div class="flex flex-column justify-between">
         
