--- a/index.html
+++ b/index.html
@@ -19,16 +19,14 @@
     justify-between
     w-full
     py-4
-    md:py-0
     px-4
     text-lg text-[#272D38]
     mt-4
-    md:my-20 md:mx-40
     md:px-0
     ">
 
     <!-- LOGO icon -->
-    <a href="#" class="font-bold">DIGITAL AGENCY</a>
+    <a href="#" class="font-bold md:ml-40">DIGITAL AGENCY</a>
 
     <!-- hamburger icon -->
     <svg xmlns="<http://www.w3.org/2000/svg>" id="menu-button" class="h-6 w-6 cursor-pointer md:hidden block"
@@ -36,13 +34,14 @@
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
     </svg>
 
-    <div class="hidden w-full md:flex md:items-center md:w-auto " id="menu">
+    <div class="hidden w-full md:flex md:items-center md:w-auto" id="menu">
       <ul class="
                   text-base text-[#272D38]
                   pt-4
                   md:flex
                   md:justify-between
-                  md:pt-0">
+                  md:pt-0
+                  md:mr-40">
         <li>
           <a class="md:p-4 py-2 block hover:text-[#8EADD5] hover:underline hover:underline-offset-8 hover:decoration-4"
             href="#">Home</a>
@@ -73,30 +72,31 @@
   </nav>
 
   <!-- background cricles -->
-  <div id="circle1"></div>
-  <div id="circle2"></div>
+  <div id="circle1" class="hidden md:block"></div>
+  <div id="circle2" class="hidden md:block"></div>
 
   <!-- hero-section -->
-  <div id="hero-section" class="flex flex-col md:flex-row justify-center md:justify-start my-20 mx-8 md:my-20 md:mx-40">
+  <div id="hero-section" class="flex flex-col justify-center md:flex-row md:justify-start my-20 mx-8 md:my-10 md:mx-40">
 
-    <div class="w-fit max-w-xl my-auto mr-auto">
+    <div class="w-fit max-w-xl my-auto mr-auto md:mr-0">
 
-      <!-- <h1 class="font-bold text-[64px] text-coolGray-800 w-[540px] my-2 leading-tight"> -->
       <h1 class="font-bold text-[40px] text-center md:text-left md:text-[64px] text-coolGray-800 leading-tight">
         Building Digital Products, Brands & Experience
       </h1>
 
       <p class="text-coolGray-800 text-center text-base md:text-lg md:text-left max-w-md capitalize my-5"">
-            Digital Agency is your online team mangement tool that easy and prompt
-        </p>
+          Digital Agency is your online team mangement tool that easy and prompt
+      </p>
   
         <div class=" bg-[#8EADD5] font-semibold w-fit text-white px-5 py-2 rounded-lg my-8 cursor-pointer
-        hover:bg-[#617794] mx-auto md:mx-0">
-        CONTACT US
+        hover:bg-[#617794] mx-auto md:mx-0">CONTACT US
     </div>
+  </div>
 
-    <img class="my-10" src="images/business-people-discussing-business-idea.svg" alt="people discuss business idea">
+  <img class="my-10 md:top-0 md:right-0" src="images/business-people-discussing-business-idea.svg"
+    alt="people discuss business idea">
 
+  </div>
   </div>
 
   <!-- companies-section -->
@@ -119,8 +119,8 @@
 
   <!-- branding-section -->
   <div id="branding-section" class="flex flex-col md:flex-row mx-8 md:mx-40 md:my-20">
-    <img class="order-2" src="images/designer-team-working-on-creative-design.svg" alt="designer team">
-    <div class="order-1 max-w-md ml-auto my-auto">
+    <img class="order-2 md:order-1" src="images/designer-team-working-on-creative-design.svg" alt="designer team">
+    <div class="order-1 md:order-2 max-w-md ml-auto my-auto">
       <div class="inline-block align-middle">
         <div class="font-bold text-center md:text-left text-3xl md:text-5xl">Branding & Design System</div>
         <div class="my-8 md:my-10 text-center md:text-left">Commonly used in the graphic, print & publishing industris
@@ -152,7 +152,7 @@
   <!-- testimonial-section -->
   <div id="testimonials-section" class="mx-auto w-fit md:my-20">
     <p class="text-xs md:text-base text-center">TESTIMONIALS</p>
-    <div class="capitalize my-4 font-bold text-center  md:text-left text-[32px] md:text-5xl">Read what others have to
+    <div class="capitalize mx-10 md:mx-0 my-4 font-bold text-center text-[32px] md:text-5xl">Read what others have to
       say
     </div>
 
@@ -205,11 +205,11 @@
       <div class="md:capitalize leading-tight font-bold text-[32px] text-center md:text-left md:text-5xl">Be a part of
         the next big
         thing</div>
-      <div class="my-10 px-10 mx-auto text-center max-w-xs">
+      <div class="my-10 px-10 md:px-0 mx-auto md:mx-0 text-center md:text-left max-w-xs">
         We work with Brands, Startups, to SMEs. Colaborate for more impact and growth
       </div>
 
-      <div class="mx-auto bg-[#8EADD5] font-semibold w-fit text-white px-5 py-2 rounded-lg my-3 cursor-pointer
+      <div class="mx-auto md:mx-0 bg-[#8EADD5] font-semibold w-fit text-white px-5 py-2 rounded-lg my-3 cursor-pointer
                   hover:bg-[#617794]">
         CONTACT US
       </div>
@@ -218,27 +218,27 @@
   </div>
 
   <footer id="footer-section" class="bg-[#F6F6F6] w-full">
-    <div class="mx-10 mt-20 py-5 md:py-20">
+    <div class="mx-10 md:mx-40 mt-20 py-10 md:py-20">
 
       <div class="flex flex-col md:flex-row md:justify-between">
 
         <!-- 1 -->
         <div class="">
-          <div class="font-bold text-center text-lg mb-8">
+          <div class="font-bold text-center md:text-left text-lg mb-8">
             DIGITAL AGENCY
           </div>
-          <div class="text-center mx-auto max-w-xs md:max-w-[180px]">
+          <div class="text-center md:text-left mx-auto max-w-xs md:max-w-[180px]">
             Building digital products,
             brands & experience
           </div>
         </div>
 
         <!-- 2 -->
-        <div class="my-10">
-          <div class="font-bold text-center text-lg mb-8">
+        <div class="my-10 md:my-0">
+          <div class="font-bold text-center md:text-left text-lg mb-8">
             Resources
           </div>
-          <div class=" text-center grid grid-rows-4 gap-2 md:gap-4">
+          <div class=" text-center md:text-left grid grid-rows-4 gap-2 md:gap-4">
             <div>Guides</div>
             <div>Blog</div>
             <div>Customer Stories</div>
@@ -247,11 +247,11 @@
         </div>
 
         <!-- 3 -->
-        <div class="my-10">
-          <div class="font-bold text-center text-lg mb-8">
+        <div class="my-10 md:my-0">
+          <div class="font-bold text-center md:text-left text-lg mb-8">
             Company
           </div>
-          <div class="grid grid-rows-4 text-center gap-2 md:gap-4">
+          <div class="grid grid-rows-4 text-center md:text-left gap-2 md:gap-4">
             <div>About Us</div>
             <div>Careers</div>
             <div>Partners</div>
@@ -260,11 +260,11 @@
         </div>
 
         <!-- 4 -->
-        <div class="my-10">
-          <div class="font-bold text-center text-lg mb-8">
+        <div class="my-10 md:my-0">
+          <div class="font-bold text-center md:text-left text-lg mb-8">
             Social Media
           </div>
-          <div class="grid grid-rows-4 text-center gap-2 md:gap-4">
+          <div class="grid grid-rows-4 text-center md:text-left gap-2 md:gap-4">
             <div>Linkedin</div>
             <div>Facebook</div>
             <div>Instagram</div>
