added some transforms

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     ">
 
     <!-- LOGO icon -->
-    <a href="#" class="font-bold md:ml-40">DIGITAL AGENCY</a>
+    <div href="#" class="font-bold transform hover:scale-105 duration-300 md:ml-40
+    ">DIGITAL AGENCY</div>
 
     <!-- hamburger icon -->
     <svg xmlns="<http://www.w3.org/2000/svg>" id="menu-button" class="h-6 w-6 cursor-pointer md:hidden block"
@@ -43,19 +44,23 @@
                   md:pt-0
                   md:mr-40">
         <li>
-          <a class="md:p-4 py-2 block hover:text-[#8EADD5] hover:underline hover:underline-offset-8 hover:decoration-4"
+          <a class="md:p-4 py-2 block hover:text-[#8EADD5] hover:underline hover:underline-offset-8 hover:decoration-4
+          transform hover:scale-105 hover:shadow-lg duration-500"
             href="#">Home</a>
         </li>
         <li>
-          <a class="md:p-4 py-2 block hover:text-[#8EADD5] hover:underline hover:underline-offset-8 hover:decoration-4"
+          <a class="md:p-4 py-2 block hover:text-[#8EADD5] hover:underline hover:underline-offset-8 hover:decoration-4
+          transform hover:scale-105 hover:shadow-lg duration-500"
             href="#">About</a>
         </li>
         <li>
-          <a class="md:p-4 py-2 block hover:text-[#8EADD5] hover:underline hover:underline-offset-8 hover:decoration-4"
+          <a class="md:p-4 py-2 block hover:text-[#8EADD5] hover:underline hover:underline-offset-8 hover:decoration-4
+          transform hover:scale-105 hover:shadow-lg duration-500"
             href="#">Testimonials</a>
         </li>
         <li>
-          <a class="md:p-4 py-2 block hover:text-[#8EADD5] hover:underline hover:underline-offset-8 hover:decoration-4"
+          <a class="md:p-4 py-2 block hover:text-[#8EADD5] hover:underline hover:underline-offset-8 hover:decoration-4
+          transform hover:scale-105 hover:shadow-lg duration-500"
             href="#">Contact</a>
         </li>
       </ul>
@@ -88,13 +93,13 @@
           Digital Agency is your online team mangement tool that easy and prompt
       </p>
   
-        <div class=" bg-[#8EADD5] font-semibold w-fit text-white px-5 py-2 rounded-lg my-8 cursor-pointer
-        hover:bg-[#617794] mx-auto md:mx-0">CONTACT US
+        <div class=" bg-[#8EADD5] font-semibold w-fit text-white px-5 py-2 rounded-lg my-8 cursor-pointer transform
+        hover:scale-110 duration-300 hover:bg-[#617794] hover:shadow-xl mx-auto md:mx-0">CONTACT US
     </div>
   </div>
 
-  <img class="my-10 md:top-0 md:right-0" src="images/business-people-discussing-business-idea.svg"
-    alt="people discuss business idea">
+  <img class="my-10 md:top-0 md:right-0 transform hover:scale-95 duration-300"
+    src="images/business-people-discussing-business-idea.svg" alt="people discuss business idea">
 
   </div>
   </div>
@@ -105,13 +110,17 @@
 
     <div id="logos-container" class="bg-[#F6F6F6] py-5 md:py-3">
       <div id="logos" class="flex">
-        <img class="mx-2 md:mx-8 h-[24px] md:h-[48px] hover:shadow-xl px-3 md:py-1 hover:rounded-lg"
+        <img
+          class="mx-2 md:mx-8 h-[24px] md:h-[48px] hover:shadow-xl px-3 md:py-1 hover:rounded-lg transform hover:scale-105 duration-300"
           src="images/spotify.svg" alt="spotify logo">
-        <img class="mx-2 md:mx-8 h-[24px] md:h-[48px] hover:shadow-xl px-3 md:py-1 hover:rounded-lg"
+        <img
+          class="mx-2 md:mx-8 h-[24px] md:h-[48px] hover:shadow-xl px-3 md:py-1 hover:rounded-lg transform hover:scale-105 duration-300"
           src="images/slack.svg" alt="slack logo">
-        <img class="mx-2 md:mx-8 h-[24px] md:h-[48px] hover:shadow-xl px-3 md:py-1 hover:rounded-lg"
+        <img
+          class="mx-2 md:mx-8 h-[24px] md:h-[48px] hover:shadow-xl px-3 md:py-1 hover:rounded-lg transform hover:scale-105 duration-300"
           src="images/dropbox.svg" alt="dropbox logo">
-        <img class="mx-2 md:mx-8 h-[24px] md:h-[48px] hover:shadow-xl px-3 md:py-1 hover:rounded-lg"
+        <img
+          class="mx-2 md:mx-8 h-[24px] md:h-[48px] hover:shadow-xl px-3 md:py-1 hover:rounded-lg transform hover:scale-105 duration-300"
           src="images/zoom.svg" alt="zoom logo">
       </div>
     </div>
@@ -119,7 +128,8 @@
 
   <!-- branding-section -->
   <div id="branding-section" class="flex flex-col md:flex-row mx-8 md:mx-40 md:my-20">
-    <img class="order-2 md:order-1" src="images/designer-team-working-on-creative-design.svg" alt="designer team">
+    <img class="order-2 md:order-1  transform hover:scale-95 duration-300"
+      src="images/designer-team-working-on-creative-design.svg" alt="designer team">
     <div class="order-1 md:order-2 max-w-md ml-auto my-auto">
       <div class="inline-block align-middle">
         <div class="font-bold text-center md:text-left text-3xl md:text-5xl">Branding & Design System</div>
@@ -127,8 +137,8 @@
           for previewing visual layout and
           mockups
         </div>
-        <img src="images/arrow.svg" alt="arrow"
-          class="rotate-90 md:rotate-0 p-3 hover:bg-sky-200 hover:shadow-xl hover:rounded-full mx-auto md:mx-0">
+        <img src="images/arrow.svg" alt="arrow" class="rotate-90 md:rotate-0 p-3 hover:bg-sky-200 hover:shadow-xl hover:rounded-full mx-auto md:mx-0
+           transform hover:scale-105 duration-500">
       </div>
     </div>
   </div>
@@ -141,11 +151,12 @@
         previewing visual layout and
         mockups
       </div>
-      <img src="images/arrow.svg" alt="arrow"
-        class="rotate-90 md:rotate-0 p-3 hover:bg-sky-200 hover:shadow-xl hover:rounded-full mx-auto md:mx-0">
+      <img src="images/arrow.svg" alt="arrow" class="rotate-90 md:rotate-0 p-3 hover:bg-sky-200 hover:shadow-xl hover:rounded-full mx-auto md:mx-0
+         transform hover:scale-105 duration-500">
     </div>
 
-    <img src="images/businessman-analyzing-data.svg" class="md:right-0" alt="designer team">
+    <img src="images/businessman-analyzing-data.svg" class="md:right-0  transform hover:scale-95 duration-300"
+      alt="designer team">
 
   </div>
 
@@ -160,7 +171,8 @@
     <div class="flex flex-col items-center gap-8 md:flex-row md:space-x-8 my-10 md:my-16">
 
       <!-- person 1 -->
-      <div class="bg-[#F6F6F6] max-w-xs rounded-xl shadow-sm p-5">
+      <div class="bg-[#F6F6F6] max-w-xs rounded-xl shadow-sm p-5
+       transform hover:scale-105 hover:shadow-2xl duration-300">
         <img class="h-[130px] border-2 rounded-full mx-auto bg-[#FDFCFC]"
           src="images/review-people/western-man-4975942-4159828 1.svg" alt="western man">
         <div class="text-lg font-medium text-center">Andrew Rathore</div>
@@ -172,7 +184,8 @@
       </div>
 
       <!-- person 2 -->
-      <div class="bg-[#F6F6F6] max-w-xs rounded-xl shadow-sm p-5">
+      <div class="bg-[#F6F6F6] max-w-xs rounded-xl shadow-sm p-5
+      transform hover:scale-105 hover:shadow-2xl duration-300">
         <img class="h-[130px] border-2 rounded-full mx-auto bg-[#FDFCFC]"
           src="images/review-people/asian-woman-4975939-4159825 1.svg" alt="asian woman">
         <div class="text-lg font-medium text-center">Vera Duncan</div>
@@ -184,7 +197,8 @@
       </div>
 
       <!-- person 3 -->
-      <div class="bg-[#F6F6F6] max-w-xs rounded-xl shadow-sm p-5">
+      <div class="bg-[#F6F6F6] max-w-xs rounded-xl shadow-sm p-5
+      transform hover:scale-105 hover:shadow-2xl duration-300">
         <img class="h-[130px] border-2 rounded-full mx-auto bg-[#FDFCFC]"
           src="images/review-people/black-woman-4975941-4159827 1.svg" alt="black woman">
         <div class="text-lg font-medium text-center">Alisha Smith</div>
@@ -200,7 +214,7 @@
 
   <!-- contact-section -->
   <div id="contact-section" class="bg-[#F6F6F6] py-10 my-20 mx-10 md:mx-40 rounded-xl flex">
-    <img class="hidden md:block" src="images/customer-support.svg" alt="customer-support">
+    <img class="transform hover:scale-95 duration-300 hidden md:block" src="images/customer-support.svg" alt="customer-support">
     <div class="my-auto mx-auto max-w-md">
       <div class="md:capitalize leading-tight font-bold text-[32px] text-center md:text-left md:text-5xl">Be a part of
         the next big
@@ -210,7 +224,7 @@
       </div>
 
       <div class="mx-auto md:mx-0 bg-[#8EADD5] font-semibold w-fit text-white px-5 py-2 rounded-lg my-3 cursor-pointer
-                  hover:bg-[#617794]">
+                  hover:bg-[#617794] transform hover:scale-105 hover:shadow-xl duration-300">
         CONTACT US
       </div>
 
